errores_compilacion.txt
tecnodromo@penguin:~/lab/cpp/oreshnek/build$ make
[  6%] Building CXX object CMakeFiles/oreshnek_server.dir/src/json/JsonValue.cpp.o
/home/tecnodromo/lab/cpp/oreshnek/src/json/JsonValue.cpp: In member function ‘Oreshnek::Json::JsonValue& Oreshnek::Json::JsonValue::operator[](size_t)’:
/home/tecnodromo/lab/cpp/oreshnek/src/json/JsonValue.cpp:80:9: error: ‘make_array’ was not declared in this scope; did you mean ‘is_array’?
   80 |         make_array();
      |         ^~~~~~~~~~
      |         is_array
/home/tecnodromo/lab/cpp/oreshnek/src/json/JsonValue.cpp: In member function ‘Oreshnek::Json::JsonValue& Oreshnek::Json::JsonValue::operator[](const std::string&)’:
/home/tecnodromo/lab/cpp/oreshnek/src/json/JsonValue.cpp:103:9: error: ‘make_object’ was not declared in this scope; did you mean ‘is_object’?
  103 |         make_object();
      |         ^~~~~~~~~~~
      |         is_object
/home/tecnodromo/lab/cpp/oreshnek/src/json/JsonValue.cpp: In function ‘void Oreshnek::Json::serialize_to_string_recursive(std::ostream&, const JsonValue&, int, int)’:
/home/tecnodromo/lab/cpp/oreshnek/src/json/JsonValue.cpp:163:17: error: ‘Oreshnek::Json::JsonType Oreshnek::Json::JsonValue::type_’ is private within this context
  163 |     switch (val.type_) {
      |                 ^~~~~
In file included from /home/tecnodromo/lab/cpp/oreshnek/src/json/JsonValue.cpp:2:
/home/tecnodromo/lab/cpp/oreshnek/include/oreshnek/json/JsonValue.h:22:14: note: declared private here
   22 |     JsonType type_;
      |              ^~~~~
/home/tecnodromo/lab/cpp/oreshnek/src/json/JsonValue.cpp:168:24: error: ‘bool Oreshnek::Json::JsonValue::<unnamed union>::bool_val’ is private within this context
  168 |             os << (val.bool_val ? "true" : "false");
      |                        ^~~~~~~~
/home/tecnodromo/lab/cpp/oreshnek/include/oreshnek/json/JsonValue.h:24:14: note: declared private here
   24 |         bool bool_val;
      |              ^~~~~~~~
/home/tecnodromo/lab/cpp/oreshnek/src/json/JsonValue.cpp:171:23: error: ‘double Oreshnek::Json::JsonValue::<unnamed union>::num_val’ is private within this context
  171 |             os << val.num_val;
      |                       ^~~~~~~
/home/tecnodromo/lab/cpp/oreshnek/include/oreshnek/json/JsonValue.h:25:16: note: declared private here
   25 |         double num_val;
      |                ^~~~~~~
make[2]: *** [CMakeFiles/oreshnek_server.dir/build.make:132: CMakeFiles/oreshnek_server.dir/src/json/JsonValue.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/oreshnek_server.dir/all] Error 2
make: *** [Makefile:91: all] Error 2